// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectColorNotificationHandler getTeamsMessage method for created notification should match snapshot when there are more than 1 events 1`] = `
Object {
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "actions": Array [
    Object {
      "title": "Open in Web",
      "type": "Action.OpenUrl",
      "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId&cid=anotherColorId",
    },
    Object {
      "title": "Open in App",
      "type": "Action.OpenUrl",
      "url": "zpl://colors?pid=projectId&cids=colorId,anotherColorId",
    },
  ],
  "body": Array [
    Object {
      "size": "large",
      "text": "projectName",
      "type": "TextBlock",
      "weight": "bolder",
    },
    Object {
      "spacing": "small",
      "text": "**2 new colors** are added! 🏃‍♂",
      "type": "TextBlock",
      "wrap": true,
    },
    Object {
      "items": Array [
        Object {
          "spacing": "none",
          "text": "Make sure your stylesheets are up to date!",
          "type": "TextBlock",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "type": "AdaptiveCard",
  "version": "1.2",
}
`;

exports[`projectColorNotificationHandler getTeamsMessage method for created notification should match snapshot when there is only 1 event 1`] = `
Object {
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "actions": Array [
    Object {
      "title": "Open in Web",
      "type": "Action.OpenUrl",
      "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId",
    },
    Object {
      "title": "Open in App",
      "type": "Action.OpenUrl",
      "url": "zpl://colors?pid=projectId&cids=colorId",
    },
  ],
  "body": Array [
    Object {
      "size": "large",
      "text": "projectName",
      "type": "TextBlock",
      "weight": "bolder",
    },
    Object {
      "spacing": "small",
      "text": "**colorName** is added! 🏃‍♂",
      "type": "TextBlock",
      "wrap": true,
    },
    Object {
      "items": Array [
        Object {
          "spacing": "none",
          "text": "Make sure your stylesheets are up to date!",
          "type": "TextBlock",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "type": "AdaptiveCard",
  "version": "1.2",
}
`;

exports[`projectColorNotificationHandler getTeamsMessage method for updated notification should match snapshot when there are more than 1 events 1`] = `
Object {
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "actions": Array [
    Object {
      "title": "Open in Web",
      "type": "Action.OpenUrl",
      "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId&cid=anotherColorId",
    },
    Object {
      "title": "Open in App",
      "type": "Action.OpenUrl",
      "url": "zpl://colors?pid=projectId&cids=colorId,anotherColorId",
    },
  ],
  "body": Array [
    Object {
      "size": "large",
      "text": "projectName",
      "type": "TextBlock",
      "weight": "bolder",
    },
    Object {
      "spacing": "small",
      "text": "**2 new colors** are updated! 🏃‍♂",
      "type": "TextBlock",
      "wrap": true,
    },
    Object {
      "items": Array [
        Object {
          "spacing": "none",
          "text": "Make sure your stylesheets are up to date!",
          "type": "TextBlock",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "type": "AdaptiveCard",
  "version": "1.2",
}
`;

exports[`projectColorNotificationHandler getTeamsMessage method for updated notification should match snapshot when there is only 1 event 1`] = `
Object {
  "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
  "actions": Array [
    Object {
      "title": "Open in Web",
      "type": "Action.OpenUrl",
      "url": "https://app.zeplin.io/project/projectId/styleguide/colors?cid=colorId",
    },
    Object {
      "title": "Open in App",
      "type": "Action.OpenUrl",
      "url": "zpl://colors?pid=projectId&cids=colorId",
    },
  ],
  "body": Array [
    Object {
      "size": "large",
      "text": "projectName",
      "type": "TextBlock",
      "weight": "bolder",
    },
    Object {
      "spacing": "small",
      "text": "**colorName** is updated! 🏃‍♂",
      "type": "TextBlock",
      "wrap": true,
    },
    Object {
      "items": Array [
        Object {
          "spacing": "none",
          "text": "Make sure your stylesheets are up to date!",
          "type": "TextBlock",
        },
      ],
      "spacing": "large",
      "type": "Container",
    },
  ],
  "type": "AdaptiveCard",
  "version": "1.2",
}
`;
